# ctci-python

./: README.md  pyproject.toml
.github/workflows/: main.yml
chapter01/: chapter01.py
chapter09/: answers.md
routines/: copy.py
tests/: test_chapter01.py  test_routines.py  testfile
