[tool.poetry]
name = "ctci-python"
version = "1.0.0"
description = "Solutions and answers for cracking code interviews"
authors = ["Nico Güttler"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
